src/objects/Customer_Information__c.object
<CustomObject>
    <description>Owner - Roopal Shah</description>
    <fields>
        <fullName>Able_to_Mention_Customer_Name__c</fullName>
        <label>Able to Mention Customer Name?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used for story search VF page</description>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>contains</operation>
                <value>Customer-Direct, Customer-Indirect</value>
            </filterItems>
            <infoMessage>Account type must be Customer-Direct or Customer-Indirect</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Information</relationshipLabel>
        <relationshipName>Customer_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Customer_Page__c</fullName>
        <label>Approved Customer Page?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
                <color>#419249</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Web_Site__c</fullName>
        <formula>Account__r.Website</formula>
        <label>Company Web Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uruguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Notes__c</fullName>
        <label>Customer Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Page_URL__c</fullName>
        <label>Customer Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DWP_in_Millions__c</fullName>
        <inlineHelpText>For currency fields, please do not input any special characters, including commas or $ signs, e.g. $1,000.</inlineHelpText>
        <label>DWP (in Millions US$)</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>InsuranceSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsuranceSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOBs__c</fullName>
        <label>LOBs</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Logo_Approved_for_Use__c</fullName>
        <label>Logo Approved for Use?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>replaced by New Customer that is automatically checked if at least one related Product has New Customer checked.</description>
        <label>New Customer - old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LatAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Customer Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Country__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>LOBs__c</columns>
        <columns>InsuranceSuite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_APAC_Customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>APAC</value>
        </filters>
        <label>All APAC Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_EMEA_Customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>EMEA</value>
        </filters>
        <label>All EMEA Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_LATAM_Customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>LatAm</value>
        </filters>
        <label>All LATAM Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NAM_Customers</fullName>
        <columns>NAME</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>Account__c</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>NAM</value>
        </filters>
        <label>All NAM Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>State_Province__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>includes</operation>
            <value>Australia</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>New_Customer__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>InsuranceSuite__c</columns>
        <columns>Region__c</columns>
        <columns>LOBs__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>New_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New Customers - Transition</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Customers_New</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>DWP_in_Millions__c</columns>
        <columns>Customer_Page_URL__c</columns>
        <columns>InsuranceSuite__c</columns>
        <columns>Region__c</columns>
        <columns>LOBs__c</columns>
        <columns>Able_to_Mention_Customer_Name__c</columns>
        <columns>Logo_Approved_for_Use__c</columns>
        <filterScope>Everything</filterScope>
        <label>New Customers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Cust Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>